--- a/package.json
+++ b/package.json
@@ -14,7 +14,11 @@
     "crypto": "^1.0.1",
     "express": "^4.17.1",
     "express-jwt": "^5.3.1",
+    "formidable": "^1.2.1",
     "jsonwebtoken": "^8.5.1",
+    "moment": "^2.24.0",
+    "mysql": "^2.17.1",
+    "qiniu": "^7.2.2",
     "socket.io": "^2.3.0"
   }
 }
